--- a/templates/contact.html
+++ b/templates/contact.html
@@ -70,7 +70,7 @@
                 <div class="aside__image">
                     <img src="{% static 'contact.svg' %}">
                 </div>
-                <h2>Contact Us</h2>
+                <h2>Contact us</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis necessitatibus vel animi ad eum,
                     cumque incidunt, quia, nihil rem ipsa iure veritatis! Ducimus unde dignissimos dicta, similique odio
                     voluptatem tempore?</p>
@@ -157,16 +157,15 @@
             </div>
 
             <div class="footer__3">
-                <h4>Primacy</h4>
+                <h4>Privacy</h4>
                 <ul class="privacy">
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Terms and conditions</a></li>
-                    <li><a href="#">Refund Policy</a></li>
                 </ul>
             </div>
 
             <div class="footer__4">
-                <h4>Contact Us</h4>
+                <h4>Contact us</h4>
                 <div>
                     <p>+91 0000000000</p>
                     <p>care@bidder.com</p>
