--- a/templates/index.html
+++ b/templates/index.html
@@ -246,16 +246,15 @@
             </div>
 
             <div class="footer__3">
-                <h4>Primacy</h4>
+                <h4>Privacy</h4>
                 <ul class="privacy">
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">Terms and conditions</a></li>
-                    <li><a href="#">Refund Policy</a></li>
                 </ul>
             </div>
 
             <div class="footer__4">
-                <h4>Contact Us</h4>
+                <h4>Contact us</h4>
                 <div>
                     <p>+91 0000000000</p>
                     <p>care@bidder.com</p>
