--- a/templates/index.html
+++ b/templates/index.html
@@ -156,14 +156,6 @@
 
 
 
-
-
-
-
-
-
-
-
     <section class="properties">
         <h2>Our Popular Properties</h2>
         <div class="container courses__container">
@@ -248,8 +240,8 @@
             <div class="footer__3">
                 <h4>Privacy</h4>
                 <ul class="privacy">
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms and conditions</a></li>
+                    <li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
+                    <li><a href="{% url 'terms' %}">Terms and conditions</a></li>
                 </ul>
             </div>
 
