--- a/templates/property.html
+++ b/templates/property.html
@@ -150,8 +150,8 @@
             <div class="footer__3">
                 <h4>Privacy</h4>
                 <ul class="privacy">
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms and conditions</a></li>
+                    <li><a href="{% url 'privacy' %}">Privacy Policy</a></li>
+                    <li><a href="{% url 'terms' %}">Terms and conditions</a></li>
                 </ul>
             </div>
 
