--- a/templates/terms.html
+++ b/templates/terms.html
@@ -175,16 +175,16 @@
 
                 <ul class="footer__socials ">
                     <li>
-                        <a href="#"><i class="uil uil-facebook-f"></i></a>
+                        <a href="http://www.facebook.com" target="_blank"><i class="uil uil-facebook-f"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="http://www.instagram.com"><i class="uil uil-instagram-alt"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-twitter"></i></a>
+                        <a href="http://www.twitter.com"><i class="uil uil-twitter"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="uil uil-linkedin-alt"></i></a>
+                        <a href="http://www.linkedin.com"><i class="uil uil-linkedin-alt"></i></a>
                     </li>
                 </ul>
             </div>
