refactor privacy policy link in terms.html

--- a/templates/terms.html
+++ b/templates/terms.html
@@ -115,8 +115,8 @@
         derivative works based on the System without our prior written consent.
         <br><br>
         Privacy:
-        Your privacy is important to us. Please refer to our Privacy Policy <a style="color:aqua;font-style:italic;"
-            href="{% url 'privacy' %}">Privacy</a> to
+        Your privacy is important to us. Please refer to our <a style="color:aqua;font-style:italic;"
+            href="{% url 'privacy' %}">Privacy Policy</a> to
         understand how we collect, use, and protect your personal information within the System.
         <br><br>
         Limitation of Liability:
